Fixing spacing for tools/apps cards.

--- a/www/static/css-src/_home.scss
+++ b/www/static/css-src/_home.scss
@@ -280,13 +280,13 @@ img#logo_top {
             .card_title {
                 color: $brand-primary;
                 font-weight: bold;
+                padding-top: 10px;
             }
             .card_inner {
                 background-color:darken(white, 85%);
                 padding: 32px 16px 32px 16px;
                 img {
                     height:50px;
-                    padding-bottom:10px;
                 }
                 &.tool .text {
                     height: 250px;
@@ -300,7 +300,7 @@ img#logo_top {
                 height: 100px;
                 img {
                     height: 100%;
-                    border-radius:22px;
+                    border-radius: 22px;
                 }
             }
         }
